--- a/frontend/src/app/pages/catalog/catalog.component.html
+++ b/frontend/src/app/pages/catalog/catalog.component.html
@@ -1,8 +1,8 @@
 <app-title class="px-8 block">
-    Vos recettes préférés
+    {{options.title}}
     <div ngProjectAs="content" class="py-2 flex flex-col gap-4">
 
-        <p>Découvrez le plus grand catalogue de burgers du monde.</p>
+        <p>{{options.description}}</p>
 
     </div>
 </app-title>
@@ -14,7 +14,7 @@
     } @else {
     <div class="flex flex-col divide-y divide-stone-200">
         @for (product of products; track product.id) {
-        <app-product-card [routerLink]="[product.id]" [product]="product"
+        <app-product-card [routerLink]="['/app','product',product.id]" [product]="product"
             class="animate-in fade-in slide-in-from-top-2 transition-all cursor-pointer hover:bg-stone-200/20">
 
             <button tuiButton size="s" appearance="secondary" ngProjectAs="actions">
