--- a/frontend/src/app/modules/card/card-create/card-create.component.html
+++ b/frontend/src/app/modules/card/card-create/card-create.component.html
@@ -1,20 +1,33 @@
 <form [formGroup]="formGroup" class="flex flex-col gap-4" (ngSubmit)="add()">
-    <tui-input formControlName="name">
-        Name
-    </tui-input>
+    <div>
+        <tui-input formControlName="name">
+            Name
+        </tui-input>
+        <tui-error formControlName="name" [error]="[] | tuiFieldError | async"></tui-error>
+    </div>
 
-    <tui-input-card formControlName="number" [autocompleteEnabled]="true">
-        Card number
-    </tui-input-card>
+    <div>
+        <tui-input-card formControlName="number" [autocompleteEnabled]="true">
+            Card number
+        </tui-input-card>
+        <tui-error formControlName="number" [error]="[] | tuiFieldError | async"></tui-error>
+    </div>
 
-    <div tuiGroup class="w-full">
-
-        <tui-input-expire formControlName="expiration" [autocompleteEnabled]="true" class="">
-            Expire date
-        </tui-input-expire>
-        <tui-input-cvc formControlName="cvc" [autocompleteEnabled]="true">
-            CVC/CVV
-        </tui-input-cvc>
+    <div>
+        <div tuiGroup class="w-full">
+            <div>
+                <tui-input-expire formControlName="expiration" [autocompleteEnabled]="true" class="">
+                    Expire date
+                </tui-input-expire>
+                <tui-error formControlName="cvc" [error]="[] | tuiFieldError | async"></tui-error>
+            </div>
+            <div>
+                <tui-input-cvc formControlName="cvc" [autocompleteEnabled]="true">
+                    CVC/CVV
+                </tui-input-cvc>
+                <tui-error formControlName="expiration" [error]="[] | tuiFieldError | async"></tui-error>
+            </div>
+        </div>
     </div>
 
     <div class="flex gap-2 justify-between items-center">
