feat: implement cart preview

--- a/frontend/src/app/components/aside/aside.component.html
+++ b/frontend/src/app/components/aside/aside.component.html
@@ -11,9 +11,8 @@
         <app-ingredient-filters></app-ingredient-filters>
     </div>
 
-    <div class="h-64 w-full rounded-xl bg-stone-100 p-3">
-        <p class="font-medium">Panier</p>
-        <p class="text-sm">Bientôt disponible</p>
+    <div class="w-full rounded-xl bg-stone-100 p-3">
+        <app-cart-preview class="h-64 block"></app-cart-preview>
     </div>
 
 </div>
