feat: implement product delete feature

--- a/frontend/src/app/components/aside/aside.component.html
+++ b/frontend/src/app/components/aside/aside.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="w-full rounded-xl bg-stone-100 p-3">
-        <app-cart-preview class="h-64 block"></app-cart-preview>
+        <app-cart-preview class="min-h-64 max-h-96 flex flex-col"></app-cart-preview>
     </div>
 
 </div>
