--- a/frontend/src/app/pages/catalog/catalog.component.html
+++ b/frontend/src/app/pages/catalog/catalog.component.html
@@ -17,7 +17,8 @@
         <app-product-card [routerLink]="['/app','product',product.id]" [product]="product"
             class="animate-in fade-in slide-in-from-top-2 transition-all cursor-pointer hover:bg-stone-200/20">
 
-            <button tuiButton size="s" appearance="secondary" ngProjectAs="actions">
+            <button tuiButton size="s" appearance="secondary" ngProjectAs="actions" stopPropagation
+                (click)="addProductToCart(product)">
                 Ajouter •
                 <p class="font-semibold ml-1 text-sm"><app-money [value]=" product.price"></app-money></p>
             </button>
