feat: display cart icon in header

--- a/frontend/src/app/components/cart-preview/cart-preview.component.html
+++ b/frontend/src/app/components/cart-preview/cart-preview.component.html
@@ -24,6 +24,6 @@
 
     </tui-scrollbar>
 
-    <button tuiButton appearance="primary" class="w-full" size="s" [routerLink]="'/cart'"
-        [disabled]="(cart$ | async)?.length === 0">Commander</button>
+    <button tuiButton class="w-full" size="s" [routerLink]="'/cart'" [disabled]="(cart$ | async)?.length === 0">Voir mon
+        panier</button>
 </div>
