feat: add user login guards

--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -19,7 +19,7 @@
                 </div>
             </ng-template>
 
-            <button tuiButton appearance="secondary" routerLink="/signup">Créer ma recette</button>
+            <button tuiButton appearance="secondary" routerLink="/designer">Créer ma recette</button>
 
         </div>
     </section>
