--- a/frontend/src/app/pages/search/search.component.html
+++ b/frontend/src/app/pages/search/search.component.html
@@ -1,1 +1,8 @@
-<p>search works!</p>
+<app-title class="px-8 block">
+    Rechercher
+    <div ngProjectAs="content" class="py-2 flex flex-col gap-4">
+
+        <p>Coucou</p>
+
+    </div>
+</app-title>
