feat: get ingredients and categories from db

--- a/frontend/src/app/components/ingredient-preview/ingredient-preview.component.html
+++ b/frontend/src/app/components/ingredient-preview/ingredient-preview.component.html
@@ -1,4 +1,4 @@
-<img src="assets/ingredients/{{ingredient.id}}.png" alt="{{ingredient.name}}" class="w-full" [tuiHint]="hint">
+<img [src]="ingredient.imageUrl" [alt]="ingredient.name" class="w-full" [tuiHint]="hint">
 
 <ng-template #hint>
     {{ingredient.name}}
