--- a/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
+++ b/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
@@ -1,12 +1,12 @@
 <div class="rounded-xl border border-orange-100 bg-gradient-to-b from-transparent to-orange-50 group">
 
-    <img src="assets/ingredients/{{ingredient.id}}.png" alt="{{ingredient.name}}" class="w-full">
+    <img [src]="ingredient.imageUrl" [alt]="ingredient.name" class="w-full">
 
     <div class="p-3 flex justify-between items-center gap-2">
         <div class="flex-1">
             <p class="font-medium">{{ingredient.name}}</p>
             <p class="line-clamp-2 opacity-60 text-sm">{{ingredient.description}}</p>
-            <p class="text-sm"><app-money [value]="ingredient.price"></app-money></p>
+            <p class="text-sm"><app-money [value]="+ingredient.price"></app-money></p>
         </div>
         <div class="flex items-center gap-2" [class.hidden]="!showControls">
             <button tuiIconButton icon="tuiIconTrash" size="s" appearance="secondary-destructive"
