--- a/frontend/src/app/components/product-stats/product-stats.component.html
+++ b/frontend/src/app/components/product-stats/product-stats.component.html
@@ -1,12 +1,10 @@
 <div class="flex justify-between items-center gap-2 w-full">
 
-    <app-stat (click)="likeClick.emit()" label="Likes" [icon]="'tuiIconHeart'" [value]="product.likes"></app-stat>
+    <app-stat (click)="likeClick.emit()" label="Likes" [icon]="'tuiIconHeart'" [value]="0"></app-stat>
     <app-stat (click)="reviewClick.emit()" label="Avis" [icon]="'tuiIconMessageCircle'"
-        value="{{product.comments}} ({{product.rating}}/5)"></app-stat>
-    <app-stat (click)="remixClick.emit()" label="Remixes" [icon]="'tuiIconRefreshCcw'"
-        [value]="product.remixes"></app-stat>
-    <app-stat (click)="orderClick.emit()" label="Commandes" [icon]="'tuiIconShoppingCart'"
-        [value]="product.orders"></app-stat>
+        value="{{0}} ({{0}}/5)"></app-stat>
+    <app-stat (click)="remixClick.emit()" label="Remixes" [icon]="'tuiIconRefreshCcw'" [value]="0"></app-stat>
+    <app-stat (click)="orderClick.emit()" label="Commandes" [icon]="'tuiIconShoppingCart'" [value]="0"></app-stat>
     <ng-content></ng-content>
 
 </div>
