fix: ingredients seeder

--- a/frontend/src/app/components/designer-config/designer-config.component.html
+++ b/frontend/src/app/components/designer-config/designer-config.component.html
@@ -14,7 +14,7 @@
 
     <div class="flex max-md:flex-col md:justify-between">
         <button tuiButton appearance="outline" (click)="cancel()">Annuler</button>
-        <button tuiButton type="submit" [disabled]="formGroup.invalid">Enregistrer</button>
+        <button tuiButton type="submit" [disabled]="formGroup.invalid">Publier et déguster</button>
     </div>
 
 </form>
