feat: search page

--- a/frontend/src/app/components/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,5 @@
 <tui-input class="w-full" tuiTextfieldIconLeft="tuiIconSearch" tuiTextfieldSize="m" [tuiTextfieldCleaner]="true"
-    [ngModel]="search" (ngModelChange)="emit($event)" [tuiTextfieldLabelOutside]="true">
+    [readOnly]="readonly" [ngModel]="search" (ngModelChange)="emit($event)" [tuiTextfieldLabelOutside]="true"
+    tuiAutoFocus>
     {{placeholder}}
 </tui-input>
