--- a/frontend/src/app/components/aside/aside.component.html
+++ b/frontend/src/app/components/aside/aside.component.html
@@ -1,12 +1,15 @@
 <div class="flex flex-col p-8 gap-4 sticky top-0">
 
-    <app-search-products></app-search-products>
+    <button class="w-full rounded-xl bg-stone-100 p-3 flex items-center gap-2 font-medium" routerLink="/app/search">
+        <tui-svg src="tuiIconSearch" class="w-6 h-6"></tui-svg>
+        Rechercher
+    </button>
 
     <div class="w-full rounded-xl bg-stone-100 p-3 flex flex-col gap-2">
         <div class="flex justify-between items-center">
             <p class="font-medium">Filtrer</p>
-            <tui-tooltip
-                content="Envie d'ingrédients en particulier ? Utiliser les filtres pour ne voir que les recettes contenant les ingrédients de votre choix"></tui-tooltip>
+            <tui-tooltip content="Envie d' ingrédients en particulier ? Utiliser les filtres pour ne voir que les recettes
+        contenant les ingrédients de votre choix"></tui-tooltip>
         </div>
         <app-ingredient-filters></app-ingredient-filters>
     </div>
