--- a/frontend/src/app/components/product-list/product-list.component.html
+++ b/frontend/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-@if (!products.length) {
+@if (!products?.length) {
 <p class="text-center">Aucun burger ne correspond à votre recherche.</p>
 } @else {
 <div class="flex flex-col divide-y divide-stone-200">
