--- a/frontend/src/app/pages/cart/cart.component.html
+++ b/frontend/src/app/pages/cart/cart.component.html
@@ -11,7 +11,7 @@
         <app-cart-product-preview [product]="item.product" [count]="item.count"></app-cart-product-preview>
 
         } @empty {
-        <button tuiButton appearance="primary" size="s" [routerLink]="'/app/trending'" class="my-10">Voir le
+        <button tuiButton appearance="primary" size="s" [routerLink]="'/trending'" class="my-10">Voir le
             catalogue</button>
         }
     </div>
