--- a/frontend/src/app/pages/signup/signup.component.html
+++ b/frontend/src/app/pages/signup/signup.component.html
@@ -1,4 +1,4 @@
-<app-title>
+<app-title class="px-8 block">
     Devenir client
     <ng-container ngProjectAs="content">
         <p>Créez un compte client pour commencer sur de bonnes bases. Cela ne sera pas long.</p>
