--- a/frontend/src/app/components/cart-icon/cart-icon.component.html
+++ b/frontend/src/app/components/cart-icon/cart-icon.component.html
@@ -1,3 +1,3 @@
 <tui-badged-content [contentTop]="(count$ | async) ?? 0">
-    <button tuiIconButton icon="tuiIconShoppingCartLarge" [routerLink]="'/cart'" appearance="flat"></button>
+    <button tuiIconButton icon="tuiIconShoppingCartLarge" [routerLink]="'/cart'" appearance="flat" size="l"></button>
 </tui-badged-content>
