--- a/frontend/src/app/pages/cart/cart.component.html
+++ b/frontend/src/app/pages/cart/cart.component.html
@@ -20,6 +20,6 @@
 
     <div class="flex justify-end gap-2">
         <button tuiButton size="l" (click)="clearCart()" appearance="outline">Vider le panier</button>
-        <button tuiButton size="l" class="place-self-end">Passer commande</button>
+        <button tuiButton size="l" class="place-self-end" routerLink="/pay">Passer commande</button>
     </div>
 </div>
